.deprecated/kubernetes/homeautomation/motioneye/motioneye.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motioneye
  namespace: homeautomation
  labels:
    app: motioneye
spec:
  replicas: 1
  selector:
    matchLabels:
      app: motioneye
  template:
    metadata:
      labels:
        app: motioneye
    spec:
      
      # Essential
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: la1r.workload/essential
                operator: In
                values:
                - "true"
      priorityClassName: essential

      volumes:
        - name: motioneye-data-volume
          persistentVolumeClaim:
            claimName: motioneye-data-claim
        - name: motioneye-config-volume
          persistentVolumeClaim:
            claimName: motioneye-config-claim
      containers:
      - name: motioneye
        image: ccrisan/motioneye:master-amd64
        resources:
          requests:
            cpu: 400m
            memory: 512Mi
          limits:
            cpu: 600m
            memory: 1Gi
        ports:
        - name: http
          containerPort: 8765
        volumeMounts:
          - name: motioneye-config-volume
            mountPath: /etc/motioneye 
          - name: motioneye-data-volume
            mountPath: /var/lib/motioneye
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: motioneye
  name: motioneye
  namespace: homeautomation
spec:
  ports:
  - name: http
    targetPort: 8765
    port: 80
  selector:
    app: motioneye
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: motioneye
  name: motioneye-lb
  namespace: homeautomation
spec:
  ports:
  - name: http
    targetPort: 8765
    port: 80
  selector:
    app: motioneye
  loadBalancerIP: 192.168.6.75
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motioneye-https
  namespace: homeautomation
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  tls:
  - secretName: motioneye-bas-tls
  rules:
  - host: cam.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: motioneye
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: motioneye-http
  namespace: homeautomation
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-http-redirect-to-https@kubernetescrd"
spec:
  rules:
  - host: cam.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: motioneye
            port:
              number: 80
